# MilightGateway

./: CMakeLists.txt  Readme.md
.cmake/Modules/: FindCheck.cmake  FindCriterion.cmake
src/: CMakeLists.txt  crc.c  crc.h  main.c  milight.c  milight.h  util.c  util.h
src/nrf51822_xxaa/: Makefile  gcc_nrf51.ld
src/radio/: config.c  config.h
tests/: CMakeLists.txt  crc.c  milight.c  util.c
